[tool.poetry]
name = "bsag"
version = "0.1.0"
description = "A Better Simple AutoGrader"
authors = ["CS 61B Staff <cs61b@berkeley.edu>"]
readme = "README.md"

packages = [
  { include = "bsag" }
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.9"
pytz = "*"
PyYAML = "^6.0"
loguru = "^0.7.0"
devtools = "^0.11.0"
pluggy = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "*"
pylint = "*"
mypy = "*"
types-PyYAML = "^6.0"
types-pytz = "*"
ruff = "^0.0"
pre-commit = "^3.1.1"
pyupgrade = "^3.2"
loguru-mypy = "^0.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
color = true
line-length = 120
target-version = ['py310']
preview = true

[tool.isort]
line_length = 120
known_first_party = 'bsag'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
profile = "black"

[tool.mypy]
python_version = "3.10"
show_error_codes = true
strict = true
plugins = ["pydantic.mypy"]
# Pylance strict and mypy conflict throughought (error vs ignore) with partial unknowns
warn_unused_ignores = false

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
good-names = "f,i,j,k,v"
extension-pkg-whitelist = ["pydantic", "loguru"]
disable = "C0114, C0115, C0116, C0103, R0903, R0913, R0914"

[tool.ruff]
fix = true
line-length = 120
extend-ignore = [
  "PLR0913",
]
extend-select = [
  "W",
  "I",    # isort
  "UP",   # pyupgrade
  "A",    # flake8-builtins
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "ISC",  # flake8-implicit-string-concat
  "EM",   # flake8-errmsg
  "PIE",
  "Q",    # flake8-quotes
  "SIM",  # flake8-simplify
  "PTH",  # flake8-pathlib
  "PL",
  "RUF",
]
